<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentCrearResenia">

    <TextView
        android:id="@+id/labelTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/labelCrearResenia"
        android:textColor="@color/verdeAston"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idInput"
        app:layout_constraintStart_toStartOf="@+id/idInput"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelIdRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="5dp"

        android:text="@string/labelIdRestaurante"
        android:textColor="?colorOnSecondary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idInput"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="@+id/idInput"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idInput"
        android:layout_width="330dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toTopOf="@+id/valoracionInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTitulo"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/labelDentroIdRestaurante" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelValoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelValoracion"

        android:textColor="?colorOnSecondary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/valoracionInput"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="@+id/valoracionInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/valoracionInput"
        android:layout_width="330dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toTopOf="@+id/comentarioInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idInput"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/labelDentroValoracion" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/labelComentario"
        android:textColor="?colorOnSecondary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/comentarioInput"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="@+id/comentarioInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comentarioInput"
        android:layout_width="330dp"
        android:layout_height="248dp"
        app:layout_constraintBottom_toTopOf="@+id/boton_volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"

        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/labelDentroComentario" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/boton_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/volver"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>