<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_fragmentInicio">

    <fragment
        android:id="@+id/nav_fragmentInicio"
        android:name="com.jcalzas.groupeat.FragmentInicio"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_inicio">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/nav_fragmentId" />
        <action
            android:id="@+id/action_nav_fragmentInicio_to_nav_fragmentCrearUsuario"
            app:destination="@id/nav_fragmentCrearUsuario" />
    </fragment>
    <fragment
        android:id="@+id/nav_fragmentId"
        android:name="com.jcalzas.groupeat.FragmentID"
        android:label="@string/labelFragmentId"
        tools:layout="@layout/fragment_id">
        <action
            android:id="@+id/action_nav_fragmentId_to_nav_fragmentMenuUsuario"
            app:destination="@id/nav_fragmentMenuUsuario" />
        <action
            android:id="@+id/action_nav_fragmentId_to_nav_fragmentInicio"
            app:destination="@id/nav_fragmentInicio" />
    </fragment>
    <fragment
        android:id="@+id/nav_fragmentAmigos"
        android:name="com.jcalzas.groupeat.FragmentAmigos"
        android:label="@string/labelFragmentAmigos"
        tools:layout="@layout/fragment_amigos" >
        <action
            android:id="@+id/action_nav_fragmentAmigos_to_nav_fragmentCiudad"
            app:destination="@id/nav_fragmentCiudad" />
    </fragment>
    <fragment
        android:id="@+id/nav_fragmentCiudad"
        android:name="com.jcalzas.groupeat.FragmentCiudad"
        android:label="@string/labelFragmentCiudad"
        tools:layout="@layout/fragment_ciudad" >
        <action
            android:id="@+id/action_nav_fragmentCiudad_to_nav_fragmentResultados"
            app:destination="@id/nav_fragmentResultados" />
    </fragment>
    <fragment
        android:id="@+id/nav_fragmentResultados"
        android:name="com.jcalzas.groupeat.FragmentResultados"
        android:label="@string/labelFragmentResultados"
        tools:layout="@layout/fragment_resultados" >
        <action
            android:id="@+id/action_nav_fragmentResultados_to_nav_fragmentId"
            app:destination="@id/nav_fragmentId" />
        <action
            android:id="@+id/action_nav_fragmentResultados_to_nav_fragment_Info_Resultados"
            app:destination="@+id/nav_fragmentInfoRestaurante"
            />
    </fragment>
    <fragment
        android:id="@+id/nav_fragmentInfoRestaurante"
        android:name="com.jcalzas.groupeat.FragmentInfoRestaurante"
        android:label="@string/volver"
        tools:layout="@layout/fragment_info_restaurante" >
        <action
            android:id="@+id/action_nav_fragmentInfoRestaurante_to_Resultados"
            app:destination="@id/nav_fragmentResultados" />
    </fragment>

    <fragment
        android:id="@+id/nav_fragmentCrearUsuario"
        android:name="com.jcalzas.groupeat.CrearUsuario"
        android:label="@string/volver"
        tools:layout="@layout/fragment_crear_usuario" >
        <action
            android:id="@+id/action_nav_fragmentInfoRestaurante_to_Resultados"
            app:destination="@id/nav_fragmentMenuUsuario" />
        <action
            android:id="@+id/action_nav_fragmentCrearUsuario_to_nav_fragmentInicio"
            app:destination="@id/nav_fragmentInicio" />
    </fragment>

    <fragment
        android:id="@+id/nav_fragmentMenuUsuario"
        android:name="com.jcalzas.groupeat."
        tools:layout="@layout/fragment_menu_usuario" >
        <action
            android:id="@+id/action_nav_fragmentMenuUsuario_to_nav_fragmentInfoUsuario"
            app:destination="@id/nav_fragmentInfoUsuario" />
        <action
            android:id="@+id/action_nav_fragmentMenuUsuario_to_nav_fragmentResenias"
            app:destination="@id/nav_fragmentResenias" />
        <action
            android:id="@+id/action_nav_fragmentMenuUsuario_to_nav_fragmentAmigos"
            app:destination="@id/nav_fragmentAmigos" />
    </fragment>

    <fragment
        android:id="@+id/nav_fragmentInfoUsuario"
        android:name="com.jcalzas.groupeat."
        tools:layout="@layout/fragment_info_usuario" >
        <action
            android:id="@+id/action_nav_fragmentInfoUsuario_to_nav_fragmentMenuUsuario"
            app:destination="@id/nav_fragmentMenuUsuario" />
    </fragment>

    <fragment
        android:id="@+id/nav_fragmentResenias"
        android:name="com.jcalzas.groupeat."
        tools:layout="@layout/fragment_resenias" >
        <action
            android:id="@+id/action_nav_fragment"
            app:destination="@id/nav_fragmentCrearResenia" />
        <action
            android:id="@+id/action_nav_fragmentResenias_to_nav_fragmentMenuUsuario"
            app:destination="@id/nav_fragmentMenuUsuario" />
    </fragment>

    <fragment
        android:id="@+id/nav_fragmentCrearResenia"
        android:name="com.jcalzas.groupeat."
        tools:layout="@layout/fragment_crear_resenia" >

        <action
            android:id="@+id/action_nav_fragmentCrearResenia_to_nav_fragmentResenias"
            app:destination="@id/nav_fragmentResenias" />
    </fragment>

</navigation>