<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentInicio">

    <TextView
        android:id="@+id/label_Bienvenida"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/labelBienvenida"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/verdeAston"
        android:textSize="40sp"
        android:textStyle="bold"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="54dp" />

    <Button
        android:id="@+id/buttonCrearUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonCrearUsuario"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/labelBlank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/labelBlank"
        android:layout_width="1dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_Recomiendanos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonRecomendar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelBlank"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>